# proc-macro-plugin

./: .gitignore  Cargo.toml  README.md
codecs/serde-json/: Cargo.toml
codecs/serde-json/src/: codec.rs  lib.rs
docs/: article-ru.md
example/: Cargo.toml
example/codecs/: serde_json_text_codec.wasm
example/src/: main.rs
text-message-derive/: Cargo.toml
text-message-derive/src/: lib.rs  wasm.rs
wasmtime-glue/: Cargo.toml
wasmtime-glue/src/: lib.rs
